--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 credentials.yaml
 src/pipeline/__pycache__/azure_tools.cpython-39.pyc
 test Brazil P&L.xlsm
+/.idea/Ingredion.iml
+/.idea/modules.xml
