--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "subscription_id": "cd93f35e-8e1c-4c76-af9d-3f3efd2618e2",
-    "resource_group": "ml_azure_dev",
-    "workspace_name": "ml_test"
+    "subscription_id": "08626a16-e6c3-46d4-832e-a48458f24b3f",
+    "resource_group": "fingredion",
+    "workspace_name": "ml_ingredion"
 }
